Linkando CSS na pagina Blog

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
 		<title>Blog - Joao da Silva</title>
 		<meta charset="utf-8">
 		<link rel="icon" href="favcon.png">
+		<link rel="stylesheet" type="text/css" href="bio.css">
 	</head>
 	<body>
 		<h1>>Blog</h1>
