--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,12 @@
 		<meta charset="utf-8">
 		<link rel="icon" href="favcon.png">
 		<link rel="stylesheet" type="text/css" href="bio.css">
+		<link rel="stylesheet" href="bio.css">
+		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+		<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
+		<!-- que é a única necessária para os cabeçalhos            -->
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 	</head>
 	<body>
 		<h1>>Blog</h1>
