Melhorando estrutura da pagina

--- a/blog.html
+++ b/blog.html
@@ -13,18 +13,23 @@
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 	</head>
 	<body>
-		<h1>>Blog</h1>
+		<main>
+			<h1>>Blog</h1>
 
-		<h2>O essencial de design responsivo</h2>
+			<h2>O essencial de design responsivo</h2>
 
-		<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
+			<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
 
-		<h1>Por que fazer páginas acessíveis?</h1>
+			<a href="#">Leia mais</a>
+			<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
 
-		<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
+			<h1>Por que fazer páginas acessíveis?</h1>
 
-		<h1>JavaScript não obstrusivo</h1>
+			<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
 
-		<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+			<h1>JavaScript não obstrusivo</h1>
+
+			<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+		</main>
 	</body>
 </html>
