--- a/blog.html
+++ b/blog.html
@@ -16,20 +16,24 @@
 		<main>
 			<h1>>Blog</h1>
 
-			<h2>O essencial de design responsivo</h2>
+				<div>
 
-			<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
+				<h2>O essencial de design responsivo</h2>
 
-			<a href="#">Leia mais</a>
-			<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
+				<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
 
-			<h1>Por que fazer páginas acessíveis?</h1>
+				<a href="#">Leia mais</a>
+				<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
 
-			<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
+				<h1>Por que fazer páginas acessíveis?</h1>
 
-			<h1>JavaScript não obstrusivo</h1>
+				<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
 
-			<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+				<h1>JavaScript não obstrusivo</h1>
+
+				<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+
+			</div>
 		</main>
 	</body>
 </html>
