--- a/blog.html
+++ b/blog.html
@@ -4,36 +4,53 @@
 		<title>Blog - Joao da Silva</title>
 		<meta charset="utf-8">
 		<link rel="icon" href="favcon.png">
-		<link rel="stylesheet" type="text/css" href="bio.css">
+		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="bio.css">
+		
 		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 		<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
-		<!-- que é a única necessária para os cabeçalhos            -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 	</head>
 	<body>
 		<main>
-			<h1>>Blog</h1>
+			<h1>Blog</h1>
 
 				<div>
 
-				<h2>O essencial de design responsivo</h2>
+					<h2>O essencial de design responsivo</h2>
 
-				<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
+					<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
 
-				<a href="#">Leia mais</a>
-				<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
+					<a href="#">Leia mais</a>
+					<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
 
-				<h1>Por que fazer páginas acessíveis?</h1>
+					<h1>Por que fazer páginas acessíveis?</h1>
 
-				<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
+					<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
 
-				<h1>JavaScript não obstrusivo</h1>
+					<h1>JavaScript não obstrusivo</h1>
 
-				<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+					<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
 
-			</div>
+				</div>
 		</main>
+		<img src="eu.jpg" alt="Foto do Joao da Silva">
+		<aside>
+			<h1>João da Silva</h1>
+			<nav>
+				<ul>
+					<li><a href="#">home</a></li>
+					<li><a href="#">portifilio</a></li>
+					<li><a href="#">sobre mim</a></li>
+					<li><a href="#">contato</a></li>
+				</ul>
+			</nav>
+			<ul>
+				<li><a href="https://github.com/victorscher"></a><img src="img/github.png" alt="GitHub"></li>
+				<li><a href="https://twitter.com/victorscherrr"></a><img src="img/twitter.png" alt="Twitter"></li>
+				<li><a href="https://linkedin.com/in/victorscher"></a><img src="img/linkedin.png" alt="linkedin"></li>
+			</ul>
+		</aside>
 	</body>
 </html>
