--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Blog - Joao da Silva</title>
 		<meta charset="utf-8">
-		<link rel="icon" href="favcon.png">
+		<link rel="icon" href="favicon.png">
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="bio.css">
 		
@@ -14,29 +14,33 @@
 	</head>
 	<body>
 		<main>
-			<h1>Blog</h1>
+			<h1 class="titulo-principal">Blog</h1>
 
-				<div>
+				<div class="conteudo">
+					<article>
+						<h2>O essencial de design responsivo</h2>
 
-					<h2>O essencial de design responsivo</h2>
+						<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
 
-					<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
+						<a href="#" class="leia-mais">Leia mais</a>
+						<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
 
-					<a href="#">Leia mais</a>
-					<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
+					</article>
+					<article>
+						<h1>Por que fazer páginas acessíveis?</h1>
 
-					<h1>Por que fazer páginas acessíveis?</h1>
+						<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
+					</article>
+					<article>
+						<h1>JavaScript não obstrusivo</h1>
 
-					<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
-
-					<h1>JavaScript não obstrusivo</h1>
-
-					<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+						<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+					</article>
 
 				</div>
 		</main>
 		<img src="eu.jpg" alt="Foto do Joao da Silva">
-		<aside>
+		<aside id="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
 				<ul>
@@ -46,11 +50,14 @@
 					<li><a href="#">contato</a></li>
 				</ul>
 			</nav>
-			<ul>
+			<ul class="icones-sociais">
 				<li><a href="https://github.com/victorscher"></a><img src="img/github.png" alt="GitHub"></li>
 				<li><a href="https://twitter.com/victorscherrr"></a><img src="img/twitter.png" alt="Twitter"></li>
 				<li><a href="https://linkedin.com/in/victorscher"></a><img src="img/linkedin.png" alt="linkedin"></li>
 			</ul>
 		</aside>
+		<footer id="rodape-pagina">
+			&copy; João da Silva 2018
+		</footer>
 	</body>
 </html>
