Aprimorando posicionamento dos elementos

--- a/blog.html
+++ b/blog.html
@@ -51,9 +51,9 @@
 				</ul>
 			</nav>
 			<ul class="icones-sociais">
-				<li><a href="https://github.com/victorscher"></a><img src="img/github.png" alt="GitHub"></li>
-				<li><a href="https://twitter.com/victorscherrr"></a><img src="img/twitter.png" alt="Twitter"></li>
-				<li><a href="https://linkedin.com/in/victorscher"></a><img src="img/linkedin.png" alt="linkedin"></li>
+				<li><a class="github" href="https://github.com/victorscher">GitHub</a></li>
+				<li><a class="twitter" href="https://twitter.com/victorscherrr">Twitter</a></li>
+				<li><a class="linkedin" href="https://linkedin.com/in/victorscher">LinkedIn</a></li>
 			</ul>
 		</aside>
 		<footer id="rodape-pagina">
