Ultimos ajustes de posicionamento usando: position:;

--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Blog - Joao da Silva</title>
 		<meta charset="utf-8">
-		<link rel="icon" href="favicon.png">
+		<link rel="icon" href="img/favicon.png">
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="bio.css">
-		
+
 		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 		<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
@@ -39,7 +39,7 @@
 
 				</div>
 		</main>
-		<img src="eu.jpg" alt="Foto do Joao da Silva">
+		<img src="img/eu.jpg" alt="Foto do Joao da Silva">
 		<aside id="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
