--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
 		<title>Blog - Joao da Silva</title>
 		<meta charset="utf-8">
 		<link rel="icon" href="img/favicon.png">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="bio.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/blog.css">
 
 		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
@@ -39,14 +39,14 @@
 
 				</div>
 		</main>
-		<img src="img/eu.jpg" alt="Foto do Joao da Silva">
+		<img src="img/eu.jpg" alt="Foto do Joao da Silva" class="foto-principal">
 		<aside id="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
-				<ul>
+				<ul class="menu-navegacao">
 					<li><a href="#">home</a></li>
 					<li><a href="#">portifilio</a></li>
-					<li><a href="#">sobre mim</a></li>
+					<li><a href="bio.html">sobre mim</a></li>
 					<li><a href="#">contato</a></li>
 				</ul>
 			</nav>
