Criando pagina: portifolio

--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 			<nav>
 				<ul class="menu-navegacao">
 					<li><a href="#">home</a></li>
-					<li><a href="#">portifilio</a></li>
+					<li><a href="portifilio.html">portifilio</a></li>
 					<li><a href="bio.html">sobre mim</a></li>
 					<li><a href="#">contato</a></li>
 				</ul>
