--- a/blog.html
+++ b/blog.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Blog - Joao da Silva</title>
-		<meta charset="utf-8">
-		<link rel="icon" href="img/favicon.png">
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/blog.css">
 
-		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
-		<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
-	</head>
-	<body>
-		<main>
-			<h1 class="titulo-principal">Blog</h1>
+<head>
+	<title>Blog - Joao da Silva</title>
+	<meta charset="utf-8">
+	<link rel="icon" href="img/favicon.png">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/blog.css">
 
-				<div class="conteudo">
-					<article>
-						<h2>O essencial de design responsivo</h2>
+	<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+	<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
+</head>
 
-						<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
+<body>
+	<main>
+		<h1 class="titulo-principal">Blog</h1>
 
-						<a href="#" class="leia-mais">Leia mais</a>
-						<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
+		<div class="conteudo">
+			<article>
+				<h2>O essencial de design responsivo</h2>
 
-					</article>
-					<article>
-						<h1>Por que fazer páginas acessíveis?</h1>
+				<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
 
-						<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
-					</article>
-					<article>
-						<h1>JavaScript não obstrusivo</h1>
+				<a href="#" class="leia-mais">Leia mais</a>
+				<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
 
-						<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
-					</article>
+			</article>
+			<article>
+				<h1>Por que fazer páginas acessíveis?</h1>
 
-				</div>
-		</main>
-		<img src="img/eu.jpg" alt="Foto do Joao da Silva" class="foto-principal">
-		<aside id="navegacao-site">
-			<h1>João da Silva</h1>
-			<nav>
-				<ul class="menu-navegacao">
-					<li><a href="#">home</a></li>
-					<li><a href="portifilio.html">portifilio</a></li>
-					<li><a href="bio.html">sobre mim</a></li>
-					<li><a href="#">contato</a></li>
-				</ul>
-			</nav>
-			<ul class="icones-sociais">
-				<li><a class="github" href="https://github.com/victorscher">GitHub</a></li>
-				<li><a class="twitter" href="https://twitter.com/victorscherrr">Twitter</a></li>
-				<li><a class="linkedin" href="https://linkedin.com/in/victorscher">LinkedIn</a></li>
+				<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
+			</article>
+			<article>
+				<h1>JavaScript não obstrusivo</h1>
+
+				<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
+			</article>
+
+		</div>
+	</main>
+	<img src="img/eu.png" alt="Foto do Joao da Silva" class="foto-principal">
+	<aside id="navegacao-site">
+		<h1>Victor Scher</h1>
+		<nav>
+			<ul class="menu-navegacao">
+				<li><a href="#">home</a></li>
+				<li><a href="portifolio.html">portifilio</a></li>
+				<li><a href="bio.html">sobre mim</a></li>
+				<li><a href="#">blog</a></li>
+				<li><a href="#">contato</a></li>
 			</ul>
-		</aside>
-		<footer id="rodape-pagina">
-			&copy; João da Silva 2018
-		</footer>
-	</body>
+		</nav>
+		<ul class="icones-sociais">
+			<li><a class="github" href="https://github.com/victorscher">GitHub</a></li>
+			<li><a class="twitter" href="https://twitter.com/victorscherrr">Twitter</a></li>
+			<li><a class="linkedin" href="https://linkedin.com/in/victorscher">LinkedIn</a></li>
+		</ul>
+	</aside>
+	<footer id="rodape-pagina">
+		&copy; Victor Scher 2018
+	</footer>
+</body>
+
 </html>
