--- a/portifolio.html
+++ b/portifolio.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/portifolio.css">
 
     <!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
@@ -19,41 +20,43 @@
         <h1 class="titulo-principal">Portifólio</h1>
 
         <div class="conteiner">
-            <div class="bmw div-trabalhos">
-                <figure>
-                    <img src="img/bmw.png" alt="Trabalho feito para a BMW">
-                    <figcaption><a href="http://bmw.com">BMW.com reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
-                </figure>
-            </div>
-            <div class="uol div-trabalhos">
-                <figure>
-                    <img src="img/uol.png" alt="Trabalho feito para a uol">
-                    <figcaption><a href="http://uol.com.br">UOL.com.br reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
-                </figure>
-            </div>
-            <div class="ibm div-trabalhos">
-                <figure>
-                    <img src="img/ibm.png" alt="Trabalho feito para a IBM">
-                    <figcaption><a href="http://ibm.com">IBM.com reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
-                </figure>
-            </div>
-            <div  class="g1 div-trabalhos">
-                <figure>
-                    <img src="img/g1.png" alt="Trabalho feito para o G1">
-                    <figcaption><a href="http://g1.com.br">G1.com.br reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
-                </figure>
-            </div>
-
+            <ul>
+                <li class="bmw div-trabalhos">
+                    <figure>
+                        <img src="img/bmw.png" alt="Trabalho feito para a BMW">
+                        <figcaption><a href="http://bmw.com">BMW.com reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
+                    </figure>
+                </li>
+                <li class="uol div-trabalhos">
+                    <figure>
+                        <img src="img/uol.png" alt="Trabalho feito para a uol">
+                        <figcaption><a href="http://uol.com.br">UOL.com.br reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
+                    </figure>
+                </li>
+                <li class="ibm div-trabalhos">
+                    <figure>
+                        <img src="img/ibm.png" alt="Trabalho feito para a IBM">
+                        <figcaption><a href="http://ibm.com">IBM.com reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
+                    </figure>
+                </li>
+                <li class="g1 div-trabalhos">
+                    <figure>
+                        <img src="img/g1.png" alt="Trabalho feito para o G1">
+                        <figcaption><a href="http://g1.com.br">G1.com.br reformulacao de design e implementacao de HTML, CSS e JavaScript</a></figcaption>
+                    </figure>
+                </li>
+            </ul>
         </div>
     </main>
-    <img src="img/eu.jpg" alt="Foto do Joao da Silva" class="foto-principal">
+    <img src="img/eu.png" alt="Foto do Joao da Silva" class="foto-principal">
     <aside id="navegacao-site">
-        <h1>João da Silva</h1>
+        <h1>Victor Scher</h1>
         <nav>
             <ul class="menu-navegacao">
                 <li><a href="#">home</a></li>
                 <li><a href="#">portifilio</a></li>
                 <li><a href="bio.html">sobre mim</a></li>
+                <li><a href="blog.html">blog</a></li>
                 <li><a href="#">contato</a></li>
             </ul>
         </nav>
@@ -64,7 +67,7 @@
         </ul>
     </aside>
     <footer id="rodape-pagina">
-        &copy; João da Silva 2018
+        &copy; Victor Scher 2018
     </footer>
 </body>
 
