Alterando title das paginas

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Blog - Joao da Silva</title>
+	<title>Blog - Victor Scher</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
