--- a/portifolio.html
+++ b/portifolio.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Portifolio - Joao da Silva</title>
+    <title>Portifolio - Victor Scher</title>
     <meta charset="utf-8">
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/reset.css">
