Reformulando todo c??do do site

--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/blog.css">
 
-	<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+	<!-- carrega a fonte Montserrat nas versões normal, itálico e negrito -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 	<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 </head>
@@ -20,26 +20,7 @@
 		<h1 class="titulo-principal">Blog</h1>
 
 		<div class="conteudo">
-			<article>
-				<h2>O essencial de design responsivo</h2>
-
-				<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
-
-				<a href="#" class="leia-mais">Leia mais</a>
-				<p>Tags: <a href="#">Design responsivo</a>, <a href="#">Mobile</a>, <a href="#">css</a></p>
-
-			</article>
-			<article>
-				<h1>Por que fazer páginas acessíveis?</h1>
-
-				<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
-			</article>
-			<article>
-				<h1>JavaScript não obstrusivo</h1>
-
-				<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
-			</article>
-
+			<h1>Ainda não há postagens nessa seção :(</h1>
 		</div>
 	</main>
 	<img src="img/eu.png" alt="Foto do Joao da Silva" class="foto-principal">
@@ -47,10 +28,9 @@
 		<h1>Victor Scher</h1>
 		<nav>
 			<ul class="menu-navegacao">
-				<li><a href="#">home</a></li>
-				<li><a href="portifolio.html">portifilio</a></li>
-				<li><a href="bio.html">sobre mim</a></li>
+				<li><a href="index.html">sobre mim</a></li>
 				<li><a href="#">blog</a></li>
+				<li><a href="certificados.html">certificados</a></li>
 				<li><a href="#">contato</a></li>
 			</ul>
 		</nav>
