--- a/certificados.html
+++ b/certificados.html
@@ -7,17 +7,17 @@
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/portifolio.css">
+    <link rel="stylesheet" href="css/certificados.css">
 
-    <!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+    <!-- carrega a fonte Montserrat nas versões normal, itálico e negrito -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <!-- carrega a fonte Open Sans Condensed na versão negrito, -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 </head>
 
 <body>
     <main>
-        <h1 class="titulo-principal">Portifólio</h1>
+        <h1 class="titulo-principal">Certificados</h1>
 
         <div class="conteiner">
             <ul>
@@ -53,10 +53,9 @@
         <h1>Victor Scher</h1>
         <nav>
             <ul class="menu-navegacao">
-                <li><a href="#">home</a></li>
-                <li><a href="#">portifilio</a></li>
-                <li><a href="bio.html">sobre mim</a></li>
+                <li><a href="index.html">sobre mim</a></li>
                 <li><a href="blog.html">blog</a></li>
+                <li><a href="#">certificados</a></li>
                 <li><a href="#">contato</a></li>
             </ul>
         </nav>
