--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/estilos.css">
-	<link rel="stylesheet" href="css/bio.css">
-	<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+	<link rel="stylesheet" href="css/index.css">
+	<!-- carrega a fonte Montserrat nas versões normal, itálico e negrito -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 	<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 </head>
@@ -19,36 +19,83 @@
 		<h1 class="titulo-principal">Sobre mim</h1>
 
 		<div class="conteudo">
-			<p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam</em> valor para meus clientes.</p>
 
-			<p>Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.</p>
+			<h2>História até aqui</h2>
 
-			<h2>Como trabalho</h2>
+			<p>Entusiasmado com tecnologia desde criança, iniciei meu aprendizado em programação aos 15 anos quando conheci e participei da <a href="https://www.fiap.com.br/maratona-de-aplicativos/" target="_blank">Maratona de Aplicativos da FIAP</a>, isso me despertou o interesse em outras tecnologias como Linux e Python, as quais eu uso no meu dia-a-dia e me fazem ter um certo apreço por tecnologias e ferramentas open-source, desde então sigo aprendendo e me envolvendo no mundo do desenvolvimento de software.</p>
 
-			<blockquote class="citacoes fiat">
-				<p> João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
-				<cite>José Souza, Fiat</cite>
-			</blockquote>
+			<p>Aos 17 me tornei discente do curso de Análise e desenvolvimento de sistemas do Instituto Federal de Educação, Ciência e Tecnologia Baiano - Campus Guanambi. Atualmente cursando quarto período, já adiquiri uma base teórica e técnica nos campos de análise e desenvolvimento de sistemas, engenharia de software e gerência de projetos que me torna capaz de realizar atividades de desenvolvimento, especificação, projeto, implementação, avaliação, suporte e manutenção de softwares</p>
 
-			<p>Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. <strong>Não trabalho com escopo fechado</strong>: o cliente é que decide quando o produto está pronto.</p>
+		    <p>Atualmente com 19 anos busco minha primeira experiência profissional para Atualmente busco minha primeira experiência profissional para usar meus conhecimentos técnicos em um ambiente empresarial para crescer com a organização e ajudá-la a ser competitiva e lucrativa.</p>
 
-			<p>Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.</p>
+			<h2>Skills</h2>
+				<ul class="skill skills-1">
+					<li>HTML
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					 </li>
+					<li>CSS
+						<div class="circle-gray"></div>
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					</li>
+					<li>JavaScript
+						<div class="circle-gray"></div>
+						<div class="circle-gray"></div>
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					</li>
+					<li>Ruby on Rails
+						<div class="circle-gray"></div>
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					</li>
+					<li>Git e GitHub
+						<div class="circle-gray"></div>
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					</li>
+					<li>Linux
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					</li>
+					<li>PL/SQL
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					</li>
+					<li>BD's relacionais
+						<div class="circle-gray"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+						<div class="circle-black"></div>
+					</li>
+
+				</ul>
 
 			<h2>Experiência</h2>
 
-			<blockquote class="citacoes petrobras">
-				<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
-				<cite>Manoel Santos, Petrobrás</cite>
-			</blockquote>
-
-			<p>Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com">BMW</a>, <a href="http://www.uol.com.br">UOL</a> e <a href="http://www.ibm.com.br">IBM</a>. Neles, o foco principal era entregar uma experiência imersiva e impactante para
-				o usuário final sem descuidar do desempenho e da acessibilidade da página.</p>
-
-			<p>Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
+			<p></p>
 
 			<h2>Comunidade</h2>
 
-			<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
+			<p></p>
 		</div>
 	</main>
 	<img src="img/eu.png" alt="Foto do Joao da Silva" class="foto-principal">
@@ -56,17 +103,16 @@
 		<h1>Victor Scher</h1>
 		<nav>
 			<ul class="menu-navegacao">
-				<li><a href="#">home</a></li>
-				<li><a href="portifolio.html">portifilio</a></li>
 				<li><a href="#">sobre mim</a></li>
 				<li><a href="blog.html">blog</a></li>
+				<li><a href="certificados.html">certificados</a></li>
 				<li><a href="#">contato</a></li>
 			</ul>
 		</nav>
 		<ul class="icones-sociais">
-			<li><a class="github" href="https://github.com/victorscher">GitHub</a></li>
-			<li><a class="twitter" href="https://twitter.com/victorscherrr">Twitter</a></li>
-			<li><a class="linkedin" href="https://linkedin.com/in/victorscher">LinkedIn</a></li>
+			<li><a class="github" href="https://github.com/victorscher" target="_blank">GitHub</a></li>
+			<li><a class="twitter" href="https://twitter.com/victorscherrr" target="_blank">Twitter</a></li>
+			<li><a class="linkedin" href="https://linkedin.com/in/victorscher" target="_blank">LinkedIn</a></li>
 		</ul>
 	</aside>
 	<footer id="rodape-pagina">
